Wed Nov 29 12:31:22 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added another revision number in the middle of the base file,
	  before the bitmap.  Also now check that there isn't any extra
	  data at the end after we finish reading it.  Incremented the
	  database format.

Wed Nov 29 11:55:03 GMT 2000 Olly Betts

	* Added OmDocument::remove_key() and OmDocument::clear_keys()

Tue Nov 28 18:34:57 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Btree bitmap now merged with base - one object, one file.

Tue Nov 28 17:13:56 GMT 2000 Olly Betts

	* Added OmDocument::set_data()

Tue Nov 28 16:47:06 GMT 2000 Olly Betts

	* Started to alter OmDocument to be a general purpose document class
	  which includes the functionality currently in OmDocumentContents.

Tue Nov 28 15:08:38 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added OmSplitOnCharsNode, which does a subset of OmRegexSplitNode
	  but less slowly.

	* Modified RegexSplit node and regexcommon so that less copying
	  of strings is needed.

Tue Nov 28 13:42:41 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Moved the Btree's bitmap into a separate object.

Tue Nov 28 13:06:36 GMT 2000 Olly Betts

	* Eliminated OmDocumentParams.

	* Removed unnecessary mutex from OmDocument::Internal.

Mon Nov 27 18:45:27 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Implement get_position_list() on databases.  Untested.  Also needs
	  some work to make consistent with open_position_list() on posting
	  lists: see todo list.

Mon Nov 27 18:29:00 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Change #define LEVEL ... to #define GET_LEVEL ... in btree_util.h:
	  fixes problem reported by includetest

Mon Nov 27 18:20:42 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added a set of modifications to the todo.xml.  Also, add a
	  "release" field, recording the release that the work must be
	  performed by.
